--- a/poweroff.htm
+++ b/poweroff.htm
@@ -38,7 +38,7 @@
 		img.onerror = check;
 		img.src = '<%=resource%>/icons/loading.gif?' + Math.random();
 
-		document.getElementById('reboot-message').innerHTML = '等待设备关机完成';
+		document.getElementById('reboot-message').innerHTML = '设备关机完成';
 	}
 
 	function reboot(button) {
